--- a/css/reusable.css
+++ b/css/reusable.css
@@ -7,6 +7,10 @@
     color: var(--color-off-white);
 }
 
+.color-green {
+    color: var(--color-green);
+}
+
 /* Text block */
 .text-block-container {
     display: flex;
@@ -28,3 +32,4 @@
 .text-block-top h2, .text-block-top h1 {
     line-height: 1;
 }
+
